Fixed styling issue where nav bar items would overflow the screen

--- a/tauri-app/src/components/menu/Menu.scss
+++ b/tauri-app/src/components/menu/Menu.scss
@@ -21,7 +21,6 @@
     background-color: variables.$color-background-panel;
     
     a {
-      width: 100%;
       height: 100%;
       .nav-item {
         width: 100%;
